[이규원] spring 종료

--- a/d_boot_toy/src/main/resources/templates/board/board-form.html
+++ b/d_boot_toy/src/main/resources/templates/board/board-form.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html xmlns:th="http://www.thymeleaf.org">
-<html>
+<!DOCTYPE html> 
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 
-<th:block th:replace="fragments :: flg_head"></th:block>
+<th:block th:replace="fragments :: frg_head"></th:block>
 <link rel="stylesheet" href="/css/board/board.css"/>
 </head>
 <body>
